# lintcstubs-arity

./: CHANGES.md  README.md  arity.t  dune  dune-project  dune-workspace.all  lintcstubs-arity.opam  lintcstubs_arity.ml  test.sh
.github/workflows/: workflow.yml
cmt/: arity.t  dune  lintcstubs_arity_cmt.ml  test.sh
cmt/lib/: dune  primitives_of_cmt.ml  primitives_of_cmt.mli
example/Makefile/: .gitignore  Makefile  README.md  foostubs.c  prog1.ml
example/dune/: README.md  dune  foo.ml  foostubs.c
example/minimal/: .gitignore  Makefile  README.md  foo.ml  foo.mli  lintcstubs_arity.ml
