(library
 (name foo)
 (foreign_stubs
  (language c)
  (names foostubs)))

; run lintcstubs_arity_cmt to generate the header file

(rule
 (action
  (with-stdout-to
   foo.h
   (progn
    (run %{bin:lintcstubs_arity_cmt} %{dep:.foo.objs/byte/foo.cmt})
    (run %{bin:lintcstubs_arity} %{dep:foo.ml})))))
